[gd_scene load_steps=17 format=3 uid="uid://bkwrn36rjcayu"]

[ext_resource type="Texture2D" uid="uid://cabhwl0alj4cr" path="res://Assets/Efeitos_Particulas/Bright_Sparkle (16 x 16).png" id="1_i7q2h"]
[ext_resource type="Script" uid="uid://56l1mgk31m73" path="res://scenes/coletaveis/gem_base.gd" id="1_ic17r"]
[ext_resource type="Texture2D" uid="uid://cfvilf6iyisg7" path="res://Assets/Coletaveis/gems.png" id="2_ic17r"]
[ext_resource type="AudioStream" uid="uid://bcox70ckqwcgh" path="res://Assets/Audio/music/sfx/coin8.wav" id="4_eb6o7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_eb6o7"]
radius = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_wykmy"]
atlas = ExtResource("1_i7q2h")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioqxi"]
atlas = ExtResource("1_i7q2h")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4f5n1"]
atlas = ExtResource("1_i7q2h")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_klb03"]
atlas = ExtResource("1_i7q2h")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eubau"]
atlas = ExtResource("2_ic17r")
region = Rect2(112, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmqd5"]
atlas = ExtResource("2_ic17r")
region = Rect2(128, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6r5l"]
atlas = ExtResource("2_ic17r")
region = Rect2(144, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8hqh"]
atlas = ExtResource("2_ic17r")
region = Rect2(160, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2iuen"]
atlas = ExtResource("2_ic17r")
region = Rect2(176, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g7pdg"]
atlas = ExtResource("2_ic17r")
region = Rect2(192, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_hpek7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wykmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioqxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4f5n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klb03")
}],
"loop": false,
"name": &"colect",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eubau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmqd5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6r5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8hqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2iuen")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g7pdg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="GemBase" type="Area2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource("1_ic17r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_eb6o7")

[node name="Anim" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_hpek7")
autoplay = "default"

[node name="Audio" type="Node" parent="."]

[node name="ASPColectEfect" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_eb6o7")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Anim" to="." method="_on_anim_animation_finished"]
